--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>About Me</h2>
-    <p>Hello, this is Khendo Lama. I am new in technology field. But I am a fast learner and I am currently taking a taking as a  fullstack web developer!</p>
+    <p>Hello, this is Khendo Lama. I am new in technology field. But I am a fast learner and I am currently taking a course for fullstack web developer.</p>
 
     <h2>Skills</h2>
         <ul>
