--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,6 @@
 <body>
     <h3>Contact</h3>
     <p>Email: khendolama37@gmail.com</p>
-    <a href="https://github.com/Khendolama"></a>
+    <a href="https://github.com/Khendolama">Github</a>
 </body>
 </html>
